--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
-<h1>Init</h1>
+<h1>{{title}}</h1>
 
+<div class="content">
+  <span>app-project app is running!</span>
+</div>
 
 <router-outlet></router-outlet>
