--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,3 @@
-<h1>{{title}}</h1>
-
-<div class="content">
-  <span>app-project app is running!</span>
-</div>
+<app-svg-animation></app-svg-animation>
 
 <router-outlet></router-outlet>
